--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,5 +18,5 @@ options:
 
 substitutions:
   _DAGS_DIRECTORY: "workflows/"
-  _DAGS_BUCKET: "us-central1-demo-instance-a649b781-bucket" # Replace with your Composer bucket
+  _DAGS_BUCKET: "us-central1-test-composer-8bf50601-bucket" # Composer bucket is updated
   _DATA_DIRECTORY: "data/"
